--- a/customersignals/index.html
+++ b/customersignals/index.html
@@ -131,14 +131,14 @@
 </main>
 
 <script type="text/javascript">
-  var globalThis._actGoal = {'settings':{'value':'/g/encrypted/goal/txSgBAH7u5l5vCnRgwHyzZZfxW5NA0yB3xKQgrAygWE', 'type' : 'WEBSITE_VISIT','goalUrl':'https://www.actito.be:443/actg'}};
-  (function() {
-     var _head = document.head || document.getElementsByTagName("head")[0];
-      var sp = document.createElement('script'); sp.type = 'text/javascript'; sp.async = true; sp.defer = true;
-      sp.src = ('https:' == document.location.protocol ? 'https://cdn.actito.be' : 'http://cdn.actito.be') + '/legacy/actito-goal/goal.js';
-      _head.appendChild(sp);
-  })();
-  </script>
+var globalThis._actGoal = {'settings':{'value':'/g/encrypted/goal/txSgBAH7u5l5vCnRgwHyzcJ6exvV1_Lb3xKQgrAygWE', 'type' : 'WEBSITE_VISIT','goalUrl':'https://www3.actito.com:443/actg'}};
+(function() {
+	 var _head = document.head || document.getElementsByTagName("head")[0];
+    var sp = document.createElement('script'); sp.type = 'text/javascript'; sp.async = true; sp.defer = true;
+    sp.src = ('https:' == document.location.protocol ? 'https://cdn3.actito.com' : 'http://cdn3.actito.com') + '/legacy/actito-goal/goal.js';
+    _head.appendChild(sp);
+})();
+</script>
 
 <script>
 
