--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
       <div class="container-fluid py-5">
         <h1 class="display-5 fw-bold">Push notifications</h1>
         <p class="col-md-8 fs-4">Page links to push notifications optional module</p>
-        <a href="https://sandboxfeatures.github.io/pushnotification/index?userId=XXXXXX"><button class="btn btn-primary position-relative" type="button">Try it<span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">NEW !</span></button></a>
-        </div>
+        <a href="https://sandboxfeatures.github.io/pushnotification/index?userId=XXXXXX"><button class="btn btn-primary position-relative" type="button">Try it</button></a>
+        <a href="https://dev1.actito.com/wf/1807820/149/en/Start.act?source=AAA"><button class="btn btn-secondary position-relative" type="button">Log In</button></a>        
+</div>
     </div>
     <div>
       <div class="col-md-6">
