--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
   import { enableRemoteNotifications, disableRemoteNotifications} from 'https://cdn.notifica.re/libs/web/v3/latest/notificare-push.js';
   import 'https://cdn.notifica.re/libs/web/v3/latest/notificare-push-ui.js';
   import 'https://cdn.notifica.re/libs/web/v3/latest/notificare-inbox.js';
-  import { fetchInbox } from 'notificare-web/inbox';
-  import { presentNotification } from 'notificare-web/push-ui';
+  import { fetchInbox } from 'https://cdn.notifica.re/libs/web/v3/latest/notificare-web/inbox';
+  import { presentNotification } from 'https://cdn.notifica.re/libs/web/v3/latest/notificare-web/push-ui';
 
   await launch();
 
